[package]
name = "wwm-gvg-strategy"
version = "1.0.0"
description = "WWM GvG Strategy Desktop App"
authors = ["Will - MaiMaiYeuEm"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.5", features = ["api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
